--- a/blocks/avatar.css
+++ b/blocks/avatar.css
@@ -1,4 +1,67 @@
 .avatar {
   width: 505px;
   min-height: 190px;
+  display: flex;
+  gap: 20px;
+}
+
+.avatar__pic {
+  width: 190px;
+  height: 190px;
+}
+
+.avatar__details {
+  min-width: 420px;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: "poppins", arial, serif;
+}
+
+.avatar__name-and-description {
+  min-width: 40px;
+  min-height: 60px;
+  gap: 12px;
+  display: grid;
+}
+
+.avatar__name {
+  margin: 0;
+  color: #212121;
+  font-size: 32px;
+  line-height: 32px;
+  font-weight: 500;
+  width: 420px;
+  height: 32px;
+}
+
+.avatar__description {
+  margin: 0;
+  color: rgba(33, 33, 33, 0.7);
+  width: 97px;
+  height: 16px;
+}
+
+.avatar__edit-button {
+  min-width: 107px;
+  min-height: 16px;
+  border: none;
+  background-color: transparent;
+  opacity: 70%;
+  display: flex;
+  gap: 9px;
+  margin: 0;
+  font-size: 16px;
+  line-height: 16px;
+}
+
+.avatar__edit-logo {
+  width: 16px;
+  margin: auto 0 0 0;
+}
+
+.avatar__edit-text {
+  margin: auto 0 0 0;
+  font-weight: 500;
 }
