--- a/blocks/page.css
+++ b/blocks/page.css
@@ -43,10 +43,14 @@
   border-radius: 8%;
 }
 
-.page__main {
+.page__cards {
   width: 1280px;
   min-height: 970px;
   margin: 20 80px 0;
   display: grid;
   gap: 20px;
+  padding-bottom: 40px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+  border-bottom: 1px solid rgba(33, 33, 33, 0.4);
 }
