--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,16 +1,16 @@
-.avatar {
+.profile {
   width: 505px;
   min-height: 190px;
   display: flex;
   gap: 20px;
 }
 
-.avatar__pic {
+.profile__pic {
   width: 190px;
   height: 190px;
 }
 
-.avatar__details {
+.profile__details {
   min-width: 420px;
   margin: 0;
   display: flex;
@@ -19,14 +19,14 @@
   font-family: "poppins", arial, serif;
 }
 
-.avatar__name-and-description {
+.profile__name-and-description {
   min-width: 40px;
   min-height: 60px;
   gap: 12px;
   display: grid;
 }
 
-.avatar__name {
+.profile__name {
   margin: 0;
   color: #212121;
   font-size: 32px;
@@ -36,14 +36,14 @@
   height: 32px;
 }
 
-.avatar__description {
+.profile__description {
   margin: 0;
   color: rgba(33, 33, 33, 0.7);
   width: 97px;
   height: 16px;
 }
 
-.avatar__edit-button {
+.profile__edit-button {
   min-width: 107px;
   min-height: 16px;
   border: none;
@@ -56,12 +56,49 @@
   line-height: 16px;
 }
 
-.avatar__edit-logo {
+.profile__edit-logo {
   width: 16px;
   margin: auto 0 0 0;
 }
 
-.avatar__edit-text {
+.profile__edit-text {
   margin: auto 0 0 0;
   font-weight: 500;
+}
+
+@media screen and (max-width: 700px) {
+  .profile {
+    width: min-content;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .profile__pic {
+    width: min-content;
+    margin: 0 auto;
+  }
+  .profile__details {
+    width: min-content;
+  }
+  .profile__name-and-description {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .profile__name {
+    width: 100%;
+    text-align: center;
+  }
+
+  .profile__description {
+    width: 100%;
+    text-align: center;
+  }
+
+  .profile__edit-button {
+    width: max-content;
+    margin: 32px auto 0;
+  }
 }
