--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,7 @@
 @import url(../blocks/profile.css);
 @import url(../blocks/card.css);
 @import url(../blocks/footer.css);
+@import url(../fonts/fonts.css);
 
 .index__screen {
   display: flex;
