--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,10 +1,11 @@
 @font-face {
   font-family: "Poppins";
-  src: url(../fonts/Poppins-Bold.ttf);
-  font-weight: bold;
+  src: url(../fonts/Poppins-Medium.ttf);
+  font-weight: 500;
 }
 
 @font-face {
-  font-family: "Poopins";
+  font-family: "Poppins";
   src: url(../fonts/Poppins-Regular.ttf);
+  font-weight: 400;
 }
