--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,8 +1,5 @@
 .card {
-  width: 413px;
-  height: 445px;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 413px;
 }
 
 .card__image {
@@ -32,15 +29,20 @@
   background-color: transparent;
   border: none;
   margin: auto 0 0 0;
+  opacity: 40%;
+}
+
+.card__heart:hover {
+  opacity: 100%;
 }
 
 @media screen and (max-width: 730px) {
   .card {
-    width: 288px;
+    max-width: 288px;
   }
 
   .card__image {
     width: 288px;
-    height: 318px;
+    height: 288px;
   }
 }
