--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -4,8 +4,7 @@
 }
 
 .footer__copyright {
-  width: 104px;
-  height: 16px;
+  max-width: 104px;
   font-family: "poppins", arial, serif;
   font-size: 16px;
   font-weight: 400;
