--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,6 +1,5 @@
 .page {
   background-color: #fcf5e5;
-  width: 100%;
   z-index: 1;
   font-family: "poppins", arial, serif;
 }
@@ -8,7 +7,6 @@
 .page__menu-bar {
   background-color: #fff;
   width: 100%;
-  height: 46px;
   display: flex;
   border-bottom: 1px solid rgba(255, 255, 255, 0.8);
 }
@@ -43,6 +41,10 @@
   border-radius: 8px;
 }
 
+.page__header-button:hover {
+  opacity: 80%;
+}
+
 .page__cards {
   max-width: 100%;
   min-height: 970px;
@@ -62,13 +64,9 @@
 }
 
 @media screen and (max-width: 930px) {
-  .page {
-    width: min-content;
-  }
-
   .page__cards {
     grid-template-columns: auto;
-    width: min-content;
+    width: max-content;
     margin: 20px auto 60px;
   }
 
