--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,5 +1,5 @@
 .profile {
-  width: 505px;
+  max-width: 505px;
   min-height: 190px;
   display: flex;
   gap: 20px;
@@ -11,7 +11,7 @@
 }
 
 .profile__details {
-  min-width: 420px;
+  max-width: 420px;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -20,8 +20,7 @@
 }
 
 .profile__name-and-description {
-  min-width: 40px;
-  min-height: 60px;
+  max-width: 260px;
   gap: 12px;
   display: grid;
 }
@@ -32,15 +31,14 @@
   font-size: 32px;
   line-height: 32px;
   font-weight: 500;
-  width: 420px;
-  height: 32px;
+  max-width: 420px;
+  text-wrap: nowrap;
 }
 
 .profile__description {
   margin: 0;
   color: rgba(33, 33, 33, 0.7);
-  width: 97px;
-  height: 16px;
+  max-width: 97px;
 }
 
 .profile__edit-button {
@@ -54,6 +52,10 @@
   margin: 0;
   font-size: 16px;
   line-height: 16px;
+}
+
+.profile__edit-button:hover {
+  opacity: 100%;
 }
 
 .profile__edit-logo {
@@ -71,6 +73,7 @@
     width: min-content;
     flex-direction: column;
     justify-content: center;
+    margin: 0 auto;
   }
 
   .profile__pic {
@@ -82,7 +85,6 @@
   }
   .profile__name-and-description {
     width: 100%;
-    margin: 0 auto;
     display: flex;
     flex-direction: column;
   }
