--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,9 +1,11 @@
 .footer {
+  margin: 60px 0;
   display: flex;
   justify-content: center;
 }
 
 .footer__copyright {
+  margin: 0;
   max-width: 104px;
   font-family: "poppins", arial, serif;
   font-size: 16px;
