--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,4 +1,13 @@
 .profile {
+  display: flex;
+  margin: 20px 80px 0;
+  justify-content: space-between;
+  max-width: 100%;
+  min-height: 210px;
+  border-bottom: 1px solid rgba(33, 33, 33, 0.4);
+  padding-bottom: 20px;
+}
+.profile__info {
   max-width: 505px;
   min-height: 190px;
   display: flex;
@@ -8,6 +17,7 @@
 .profile__pic {
   width: 190px;
   height: 190px;
+  object-fit: cover;
 }
 
 .profile__details {
@@ -31,14 +41,21 @@
   font-size: 32px;
   line-height: 32px;
   font-weight: 500;
-  max-width: 420px;
+  max-width: 100%;
   text-wrap: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .profile__description {
   margin: 0;
   color: rgba(33, 33, 33, 0.7);
-  max-width: 97px;
+  max-width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 500;
 }
 
 .profile__edit-button {
@@ -56,6 +73,7 @@
 
 .profile__edit-button:hover {
   opacity: 100%;
+  cursor: pointer;
 }
 
 .profile__edit-logo {
