--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,16 +1,4 @@
-.cards {
-  max-width: 100%;
-  min-height: 970px;
-  margin: 20px 80px 0;
-  display: grid;
-  gap: 20px;
-  padding-bottom: 40px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto;
-  border-bottom: 1px solid rgba(33, 33, 33, 0.4);
-}
-
-.cards__card {
+.card {
   max-width: 413px;
 }
 
@@ -25,7 +13,7 @@
 .card__details {
   display: flex;
   justify-content: space-between;
-  padding-top: 10px;
+  padding-top: 12px;
 }
 
 .card__name {
@@ -54,20 +42,8 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 1360px) {
-  .cards {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
 @media screen and (max-width: 930px) {
-  .cards {
-    grid-template-columns: auto;
-    width: max-content;
-    margin: 20px auto 60px;
-  }
-
-  .cards__card {
+  .card {
     max-width: 288px;
   }
 
