--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,15 +1,13 @@
 .profile {
   display: flex;
-  margin: 20px 80px 0;
+  margin: 36px 80px 0;
   justify-content: space-between;
   max-width: 100%;
-  min-height: 210px;
   border-bottom: 1px solid rgba(33, 33, 33, 0.4);
   padding-bottom: 20px;
 }
 .profile__info {
   max-width: 505px;
-  min-height: 190px;
   display: flex;
   gap: 20px;
 }
@@ -42,9 +40,12 @@
   line-height: 32px;
   font-weight: 500;
   max-width: 100%;
-  text-wrap: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+  line-clamp: 3;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .profile__description {
@@ -53,6 +54,10 @@
   max-width: 100%;
   text-overflow: ellipsis;
   overflow: hidden;
+  line-clamp: 3;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
   font-size: 16px;
   line-height: 16px;
   font-weight: 500;
@@ -86,7 +91,25 @@
   font-weight: 500;
 }
 
-@media screen and (max-width: 700px) {
+.profile__new-post-btn {
+  margin: auto 0 0 0;
+  width: 149px;
+  min-height: 52px;
+  border: none;
+  background-color: #212121;
+  color: #fcf5e5;
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 500;
+  border-radius: 8px;
+}
+
+.profile__new-post-btn:hover {
+  opacity: 80%;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 930px) {
   .profile {
     width: min-content;
     flex-direction: column;
@@ -100,7 +123,18 @@
   }
   .profile__details {
     width: min-content;
+    margin: 0 auto;
   }
+
+  .profile__info {
+    max-width: 505px;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    display: flex;
+    margin: 20px auto;
+  }
+
   .profile__name-and-description {
     width: 100%;
     display: flex;
@@ -110,6 +144,7 @@
   .profile__name {
     width: 100%;
     text-align: center;
+    text-wrap: nowrap;
   }
 
   .profile__description {
@@ -120,5 +155,11 @@
   .profile__edit-button {
     width: max-content;
     margin: 32px auto 0;
+  }
+
+  .profile__new-post-btn {
+    width: 288px;
+    margin: 20px auto;
+    max-width: 100%;
   }
 }
