--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -28,7 +28,6 @@
 }
 
 .profile__name-and-description {
-  max-width: 260px;
   gap: 12px;
   display: grid;
 }
@@ -111,23 +110,29 @@
 
 @media screen and (max-width: 930px) {
   .profile {
-    width: min-content;
+    max-width: 288px;
     flex-direction: column;
     justify-content: center;
     margin: 0 auto;
   }
 
   .profile__pic {
-    width: min-content;
+    width: 80px;
+    height: 80px;
     margin: 0 auto;
   }
   .profile__details {
-    width: min-content;
     margin: 0 auto;
+    font-size: 16px;
+    line-height: 16px;
+  }
+
+  .profile__name {
+    font-size: 20px;
+    line-height: 20px;
   }
 
   .profile__info {
-    max-width: 505px;
     flex-direction: column;
     justify-content: center;
     align-content: center;
@@ -136,7 +141,7 @@
   }
 
   .profile__name-and-description {
-    width: 100%;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
   }
@@ -144,7 +149,6 @@
   .profile__name {
     width: 100%;
     text-align: center;
-    text-wrap: nowrap;
   }
 
   .profile__description {
