--- a/blocks/card.css
+++ b/blocks/card.css
@@ -47,6 +47,10 @@
     max-width: 288px;
   }
 
+  .card__name {
+    font-size: 16px;
+  }
+
   .card__image {
     width: 288px;
     height: 288px;
