--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -20,5 +20,7 @@
     grid-template-columns: auto;
     width: max-content;
     margin: 20px auto 60px;
+    row-gap: 20px;
+    padding-bottom: 20px;
   }
 }
