--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -7,7 +7,6 @@
   padding-bottom: 20px;
 }
 .profile__info {
-  max-width: 505px;
   display: flex;
   gap: 20px;
 }
@@ -16,6 +15,7 @@
   width: 190px;
   height: 190px;
   object-fit: cover;
+  border-radius: 8px;
 }
 
 .profile__details {
@@ -163,7 +163,7 @@
 
   .profile__new-post-btn {
     width: 288px;
-    margin: 20px auto;
+    margin: 0 auto;
     max-width: 100%;
   }
 }
