--- a/pages/index.css
+++ b/pages/index.css
@@ -6,3 +6,4 @@
 @import url(../blocks/cards.css);
 @import url(../blocks/footer.css);
 @import url(../fonts/fonts.css);
+@import url(../blocks/modal.css);
