--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /*visibility: hidden;*/
+  visibility: hidden;
 }
 
 .modal__container {
