--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,6 +10,10 @@
   visibility: hidden;
 }
 
+.modal_opened {
+  visibility: visible;
+}
+
 .modal__container {
   position: fixed;
   background-color: #fff;
@@ -38,12 +42,13 @@
   background-color: rgba(255, 255, 255, 0);
   border-color: rgba(255, 255, 255, 0);
   padding: 0;
+  opacity: 40%;
 }
 
 .modal__content {
   display: flex;
   flex-direction: column;
-  padding: 0 50px 32px;
+  margin: 0 50px 32px;
   gap: 32px;
 }
 
@@ -83,6 +88,7 @@
 
 .modal__close-button:hover {
   cursor: pointer;
+  opacity: 70%;
 }
 
 .modal__save:hover {
