--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,5 +1,6 @@
 .card {
   max-width: 413px;
+  position: relative;
 }
 
 .card__image {
@@ -32,14 +33,58 @@
 
 .card__heart {
   background-color: transparent;
+  background-image: url(../images/Union.svg);
+  width: 23px;
+  height: 20px;
   border: none;
   margin: auto 0 0 0;
   opacity: 40%;
+}
+.card__heart_filled {
+  background-color: transparent;
+  width: 22px;
+  height: 20px;
+  background-image: url(../images/Union_liked.svg);
+  border: none;
+  margin: auto 0 0 0;
+  opacity: 100%;
 }
 
 .card__heart:hover {
   opacity: 100%;
   cursor: pointer;
+}
+
+.card__heart_filled:hover {
+  opacity: 50%;
+  cursor: pointer;
+}
+
+.card__delete-button {
+  border-radius: 100%;
+  border: none;
+  width: 25px;
+  height: 25px;
+  background: rgba(0, 0, 0, 0.3) url(../images/delete.png) center no-repeat;
+  z-index: 2;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.card__delete-button:hover {
+  background-color: #ff6565;
+  cursor: pointer;
+}
+
+.card__delete-icon {
+  width: 25px;
+  height: 25px;
+  z-index: 3;
+  width: 12px;
+  height: 15px;
 }
 
 @media screen and (max-width: 930px) {
