--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -95,6 +95,49 @@
   opacity: 80%;
   cursor: pointer;
 }
+.modal__picture-box {
+  position: fixed;
+  max-width: 991px;
+  max-height: 661px;
+  z-index: 5;
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.modal__picture {
+  object-fit: contain;
+  max-width: 991px;
+  max-height: 661px;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.modal__picture-close {
+  position: relative;
+  margin-left: 13px;
+  width: 40px;
+  height: 40px;
+  opacity: 100%;
+}
+
+.modal__picture-caption {
+  position: absolute;
+  bottom: -40px;
+  left: 0px;
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 500;
+  font-family: "poppins", arial, serif;
+  color: #fff;
+  background-color: #212121;
+  border-radius: 8px;
+  padding: 4px 8px;
+}
+
+.modal__picture-close:hover {
+  opacity: 40%;
+  cursor: pointer;
+}
 
 @media screen and (max-width: 930px) {
   .modal {
