--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -8,10 +8,14 @@
   justify-content: center;
   align-items: center;
   visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 1s, opacity 1s ease-in-out 0s;
 }
 
 .modal_opened {
   visibility: visible;
+  opacity: 1;
+  transition: opacity 1s ease-in-out 0s;
 }
 
 .modal__container {
@@ -100,8 +104,6 @@
   max-width: 991px;
   max-height: 661px;
   z-index: 5;
-  display: flex;
-  flex-direction: row-reverse;
 }
 
 .modal__picture {
@@ -113,11 +115,11 @@
 }
 
 .modal__picture-close {
-  position: relative;
-  margin-left: 13px;
+  position: absolute;
   width: 40px;
   height: 40px;
   opacity: 100%;
+  right: -53px;
 }
 
 .modal__picture-caption {
@@ -137,6 +139,21 @@
 .modal__picture-close:hover {
   opacity: 40%;
   cursor: pointer;
+}
+
+@media screen and (max-width: 1145px) {
+  .modal__picture-box {
+    max-width: 800px;
+  }
+
+  .modal__picture-close {
+    right: 0px;
+    top: -48px;
+  }
+
+  .modal__picture {
+    max-width: 800px;
+  }
 }
 
 @media screen and (max-width: 930px) {
@@ -180,5 +197,9 @@
   }
   .modal__save {
     width: 276px;
+  }
+
+  .modal__picture {
+    max-width: 288px;
   }
 }
