--- a/blocks/card.css
+++ b/blocks/card.css
@@ -44,7 +44,7 @@
   background-color: transparent;
   width: 22px;
   height: 20px;
-  background-image: url(../images/Union_liked.svg);
+  background-image: url(../images/Union_liked.png);
   border: none;
   margin: auto 0 0 0;
   opacity: 100%;
