--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -22,7 +22,7 @@
   position: fixed;
   background-color: #fff;
   width: 730px;
-  height: 408px;
+  height: fit-content;
   z-index: 5;
   border-radius: 8px;
 }
