--- a/pages/index.css
+++ b/pages/index.css
@@ -7,3 +7,4 @@
 @import url(../blocks/footer.css);
 @import url(../fonts/fonts.css);
 @import url(../blocks/modal.css);
+@import url(../blocks/error.css);
