--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -5,6 +5,6 @@
 @import url(../blocks/card.css);
 @import url(../blocks/cards.css);
 @import url(../blocks/footer.css);
-@import url(../fonts/fonts.css);
+@import url(../../fonts/fonts.css);
 @import url(../blocks/modal.css);
 @import url(../blocks/error.css);
