--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,3 +8,4 @@
 @import url(../../fonts/fonts.css);
 @import url(../blocks/modal.css);
 @import url(../blocks/error.css);
+@import url(../blocks/delete.css);
