--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,3 +9,4 @@
 @import url(../blocks/modal.css);
 @import url(../blocks/error.css);
 @import url(../blocks/delete.css);
+@import url(../blocks/button.css);
