--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -49,6 +49,11 @@
   opacity: 40%;
 }
 
+.modal__close-button_white {
+  opacity: 100%;
+  margin: 0 12px 145px;
+}
+
 .modal__form {
   display: flex;
   flex-direction: column;
