--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -18,6 +18,31 @@
   border-radius: 8px;
 }
 
+.profile__pic_editBtn {
+  display: flex;
+  position: relative;
+  margin: 162px auto 12px;
+  z-index: 4;
+  visibility: hidden;
+}
+
+.profile__pic_overlay {
+  position: absolute;
+  width: 190px;
+  height: 190px;
+  border-radius: 8px;
+  background-color: #000;
+  opacity: 50%;
+  z-index: 3;
+  visibility: hidden;
+  cursor: pointer;
+}
+
+.profile__pic_overlay-visible {
+  visibility: visible;
+  cursor: pointer;
+}
+
 .profile__details {
   max-width: 420px;
   margin: 0;
@@ -121,6 +146,27 @@
     height: 80px;
     margin: 0 auto;
   }
+
+  .profile__pic_editBtn {
+    visibility: visible;
+    margin: 0;
+    position: absolute;
+  }
+
+  .profile__pic_overlay {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    top: 11.5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 52px 4px 4px 52px;
+    border-radius: 8px;
+    background-color: rgba(0, 0, 0, 0);
+    opacity: 1;
+    visibility: visible;
+  }
+
   .profile__details {
     margin: 0 auto;
     font-size: 16px;
