--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -10,3 +10,4 @@
 @import url(../blocks/error.css);
 @import url(../blocks/delete.css);
 @import url(../blocks/button.css);
+@import url(../blocks/avatar.css);
