--- a/src/blocks/page.css
+++ b/src/blocks/page.css
@@ -7,6 +7,7 @@
   background-color: #fcf5e5;
   z-index: 1;
   font-family: "poppins", arial, serif;
+  width: 100vw;
 }
 
 @media screen and (max-width: 930px) {
